# smafe

./: .gitignore  INSTALL  LICENSE  Makefile.am  README  README.md  build.sh  configure.ac  doxygen.cfg
customer-specific/: config_default.opt
doc/doc-deploy/: LICENSE  README
lib/argtable/src/: Makefile.am  ReadMe.txt  argtable.vcproj  argtable2.c
lib/argtable/win32/: argtable.lib
lib/libpq/win32/: libpq.lib  libpqdll.lib
misc/: doxygen-smafe.conf  makecheck.sh  mkdeploy.sh  mkjobs.sh  smafewrapd-live-segmented-file.sh
misc/misc-deploy/: INSTALL  run.sh  sm-wrapper-script-macosx.sh  sm-wrapper-script.sh  smafed  smafesetup.sh
misc/to-be-verified/: smafesystem  startDaemon.sh
smafedec/: Makefile.am
smafedec/src/: smafeFileExternal.h  smafeFileMP3.h  smafeFileWAV.h  smafefile.cpp  smafefile.h  wavIO.cpp  wavIO.h
smafedecrypt/: Makefile.am
smafedecrypt/src/: smafedecrypt.cpp
smafedist/: Makefile.am
smafedist/src/: smafeDistancesCalc.cpp  smafeDistancesCalc.h
smafedistd/: Makefile.am
smafedistd/src/: smafedistd.cpp
smafedistd/test/: testDistcalcPerf.cpp
smafeext/: Copy of Makefile.am  Makefile.am
smafeext/src/: SmafeSomlibfileExtractor.cpp  SmafeSomlibfileExtractor.h  SmafeTimbralExtractor.cpp  SmafeTimbralExtractor.h  smafeExtractor.h  smafeExtractorUtil.h  smafeRPExtractor.cpp  smafeRPExtractor.h
smafeext/test/: testSmafeRPExtractor.cpp  testSmafeTimbralExtractor.cpp
smafeext/test/resources/: featuresResultArraysRPExtract.txt  featuresResultArraysTimbralExtract.txt
smafenorm/: Makefile.am
smafenorm/src/: smafenorm.cpp
smafequery/: Makefile.am
smafequery/src/: smafequery.cpp
smafestore/: Makefile.am  README.TXT  smafestore.bootstrap.data.sql  smafestore.dump.groups.sql  smafestore.dump.roles.sql  smafestore.dump.sql  smafestore.dump.testroles.sql
smafestore/src/: smafestore_specific_include.h  smafestore_specific_include_no_text.h  smafestoredb.cpp  smafestoredb.h  smafestoredb_pq.cpp  smafestoredb_pq.h  smafestoredb_sl.cpp  smafestoredb_sl.h
smafeutil/: Makefile.am
smafeutil/src/: SmafeSomlibParser.h  smafeAbstractFeatureVector.cpp  smafeAbstractFeatureVector.h  smafeAbstractOutput.h  smafeExportDefs.h  smafeFVType.h  smafeFeatureVectorClasses.h  smafeLogger.cpp  smafeLogger.h  smafeNumericFeatureVector.cpp  smafeNumericFeatureVector.h  smafeProgress.h  smafeTextfileOutput.cpp  smafeTextfileOutput.h  smafedaemon1.h  smafedaemon2.h  smafeopt.cpp  smafeopt.h  smafeutil.cpp  smafeutil.h  tAudioformat.h  tLiveNNMessage.cpp  tLiveNNMessage.h
smafeutil/test/: test_with_shellscript.sh  testtemplate.cpp
smafewrapd/: Makefile.am  help.opt
smafewrapd/src/: smafeparamhelper.h  smafewrapd.cpp
smintapi/config/: liveapi.ini.template  smintapi.ini.template
smintapi/lib/: MyLog.php  ResponseObject.php  RestObject.php  RestRequest.php  RestService.php  RestUtils.php  RestXMLObject.php  SmafeApiUtils.php  SmintErrorXML.php  SmintXML.php  SmintapiConfig.php  Track.php  TrackAdd.php  TrackDelete.php  TrackExternalKey.php  TrackExternalKeyService.php  TrackLive.php  TrackService.php  TrackServiceAdd.php  TrackServiceDelete.php  TrackServiceLive.php  Version.php  VersionService.php  bootstrapapi.php
smintapi/misc/: cmp.sh
smintapi/test/: README  phpunit.xml  test.ini
smintapi/test/helpers/: SmintTestUtils.php  TestConfig.php  bootstrapservertest.php
smintapi/test/phpunittests/: AddUrlTest.php  Addfile1Test.php  DeleteTest.php  ExternalKeyTest.php  QueryTestAfterSmafeDist.php  QueryTestAfterSmafeWrapBeforeSmafeDist.php  QueryTestBeforeSmafeWrap.php  SimpleQueryTest.php  VersionTest.php  WrongContentTypeTest.php
smintapi/test/phpunittests_templates/: FullTemplateTest.php  SimpleTemplateTest.php
smintapi/test/resources/: Addfile1Test.xml  file-collection-setup.xls
smintapi/test/script-tests/: testAccessibility.sh
smintapi/web/: .htaccess  liveapi.php  smintapi.php
smuiupdated/: Makefile.am
smuiupdated/src/: smuiupdated.cpp
test/: TestRunner.cpp  checkEnv.lib  cleanup.sh  testCleanupRemoveDB.sh  testConfig.sh  testCreateDB.sh  testDecrypt.sh  testDistd.sh  testDistd_extended.sh  testDistd_extended2.sh  testDistd_live.sh  testFiletypes.sh  testLic.sh  testNorm.sh  testQuery.sh  testSmuiupdated.sh  testTicket75_twobadfiles.sh  testTimbralExtractorNoFrames.sh  testWrap.sh  testWrapNoDoubleFree.sh  testWrap_extended.sh  testWrap_extended_nopass.sh
test/resources/: localhost-testcasedb-dbconnection-admin.opt  localhost-testcasedb-dbconnection.opt  test.opt  testWrapd_ext_1.reference.txt  testWrapd_ext_2.reference.txt  testWrapd_ext_3.reference.txt
test/resources/testConfig/: query1.txt
test/resources/testDecrypt/: cipher1.txt  cipher2.txt  plain1.txt  plain2.txt
test/resources/testDistd/: query0.txt  query1.txt
test/resources/testDistd_extended/: contents.sql  more_contents.sql  test.opt  testDistd_extended_query1_reference.txt  testDistd_extended_query2_reference.txt  testDistd_extended_query3_reference.txt  testDistd_extended_query3b_reference.txt  testDistd_extended_query4_reference.txt  testDistd_extended_query5_reference.txt
test/resources/testDistd_live/: _info.txt  data.dump.sql  data.dump.sql.1.35  result-1.reference.txt  result-1.regexp.txt  result-2.regexp.txt  result-GETOPTS.reference.txt  result-GETOPTS.reference.txt.1.35  telnet-input-1.txt  test.opt
test/resources/testFiletypes/: test.aac  test.flac  test.m4a
test/resources/testLic/: query1.txt
test/resources/testSmuiupdated/: test.opt  testSmuiupdated.2.map  testSmuiupdated.reference1.txt  testSmuiupdated.reference10.txt  testSmuiupdated.reference11.txt  testSmuiupdated.reference3.txt  testSmuiupdated.reference4.txt  testSmuiupdated.reference5.txt  testSmuiupdated.reference6.txt  testSmuiupdated.reference7.txt  testSmuiupdated.reference8.txt  testSmuiupdated.reference9.txt  testSmuiupdated.sql  testSmuiupdated2.sql  testSmuiupdated3.sql  testSmuiupdated4.sql
test/resources/testWrap/: query2.txt  query3.txt  query4.txt
test/resources/testWrap_extended/: test.opt
test/resources/testWrap_extended_nopass/: test.opt
